--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ djangorestframework==3.12.2
 gunicorn==20.0.4
 Pillow==8.1.2
 psycopg2-binary==2.8.6
+python-decouple==3.4
 pytz==2021.1
+shortuuid==1.0.1
 sqlparse==0.4.1
 whitenoise==5.2.0
-
