--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.3.1
 attrs==20.3.0
 autobahn==21.3.1
 Automat==20.2.0
+certifi==2020.12.5
 cffi==1.14.5
 channels==3.0.3
+chardet==4.0.0
 constantly==15.1.0
 cryptography==3.4.7
 daphne==3.0.2
@@ -12,23 +14,30 @@ dj-database-url==0.5.0
 Django==3.1.7
 django-cors-headers==3.7.0
 djangorestframework==3.12.2
+djangorestframework-jsonapi==4.1.0
+fcm-django==0.3.10
 gunicorn==20.0.4
 hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
+inflection==0.5.1
 Pillow==8.1.2
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pyfcm==1.4.9
 pyOpenSSL==20.0.1
 python-decouple==3.4
+python-monkey-business==1.0.0
 pytz==2021.1
+requests==2.25.1
 service-identity==18.1.0
 shortuuid==1.0.1
 six==1.15.0
 sqlparse==0.4.1
 Twisted==21.2.0
 txaio==21.2.1
+urllib3==1.26.4
 whitenoise==5.2.0
 zope.interface==5.3.0
